container fix - removing big padding for containers on mobile.

--- a/src/blocks/block-container/styles/style.scss
+++ b/src/blocks/block-container/styles/style.scss
@@ -7,6 +7,13 @@
 	margin: 0 0 1.2em 0;
 	position: relative;
 	padding: 0;
+	&.alignfull {
+		.lsx-container-content {
+			@media only screen and (max-width: 900px) {
+				padding: 1em 3em;
+			}
+		}
+	}
 
 	&.alignfull {
 		.editor-block-list__block {
@@ -50,7 +57,6 @@
 		margin: 0 auto;
 		position: relative;
 		@media only screen and (max-width: 900px) {
-			padding: 1em 3em;
 			.lsx-block-container {
 				.lsx-container-content {
 					padding: 0;
